--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,30 @@ gameDB/log/logmirror.ctrl
 gameDB/log/log.ctrl
 gameDB/log/log1.dat
 gameDB/log/logmirror.ctrl
+gameDB/log/log.ctrl
+gameDB/log/log1.dat
+gameDB/log/logmirror.ctrl
+gameDB/seg0/c10.dat
+gameDB/seg0/c101.dat
+gameDB/seg0/c121.dat
+gameDB/seg0/c130.dat
+gameDB/seg0/c141.dat
+gameDB/seg0/c180.dat
+gameDB/seg0/c1a1.dat
+gameDB/seg0/c1b1.dat
+gameDB/seg0/c20.dat
+gameDB/seg0/c230.dat
+gameDB/seg0/c241.dat
+gameDB/seg0/c31.dat
+gameDB/seg0/c380.dat
+gameDB/seg0/c391.dat
+gameDB/seg0/c3a1.dat
+gameDB/seg0/c3b1.dat
+gameDB/seg0/c41.dat
+gameDB/seg0/c51.dat
+gameDB/seg0/c60.dat
+gameDB/seg0/c81.dat
+gameDB/seg0/c90.dat
+gameDB/seg0/ca1.dat
+gameDB/seg0/cf0.dat
+gameDB/service.properties
